--- a/index.html
+++ b/index.html
@@ -1,7 +1,55 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel='icon' href='favicon.ico' type='image/x-icon' />
+        <meta name="description" content="I'm Claire, a graphic and UX/UI designer. I'm passionate about designing useful solutions to the online user experience." />
+        <!--<meta name="keywords" content="" />
+        <link rel="apple-touch-icon" href="favicon.png" />-->
+
+        <title>CLAIRECODESIGN</title>
+
+        <!--other external links here-->
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+        <link rel="stylesheet" href="https://use.typekit.net/nmh2yij.css">
+
+        <!--my styles here-->
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            <div class="header-item">
+                <ul id="header-links">
+                    <li><a target="_blank" href="https://www.behance.net/clairecodesign"><i class="fab fa-behance"></i></a></li>
+                    <li><a target="_blank" href="https://dribbble.com/clairecodesign"><i class="fab fa-dribbble"></i></a></li>
+                    <li><a target="_blank" href="https://www.linkedin.com/in/claireguzman/"><i class="fab fa-linkedin"></i></a></li> 
+                </ul>
+            </div>
+            <div class="header-item">
+                <h1 id="page-title">CLAIRE<b>CO</b>DESIGN</h1>
+            </div>
+            <div class="header-item">
+                <ul id="navigation">  
+                    <li>Home</li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </header>
+        <main>
+            <div id="content">
+                <article class="project">
+                    <a href="project-1-name.html"><img src="project-4.png" alt="project 1" class="project-thumbnail"> </a>
+                </article>
+            </div>
+        </main>
+        <footer>
+            <ul id="footer-links">
+                 <li><a target="_blank" href="https://www.behance.net/clairecodesign"><i class="fab fa-behance"></i></a></li>
+                <li><a target="_blank" href="https://dribbble.com/clairecodesign"><i class="fab fa-dribbble"></i></a></li>
+                <li><a target="_blank" href="https://www.linkedin.com/in/claireguzman/"><i class="fab fa-linkedin"></i></a></li> 
+            </ul>
+        </footer>
+    </body>
 </html>
