--- a/about.html
+++ b/about.html
@@ -1,1 +1,76 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel='icon' href='favicon.ico' type='image/x-icon' />
+        <meta name="description" content="I'm Claire, a graphic and UX/UI designer. I'm passionate about designing useful solutions to the online user experience." />
+        <!--<meta name="keywords" content="" />
+        <link rel="apple-touch-icon" href="favicon.png" />-->
 
+        <title>CLAIRECODESIGN</title>
+
+        <!--other external links here-->
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+        <link rel="stylesheet" href="https://use.typekit.net/nmh2yij.css">
+
+        <!--my styles here-->
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            <div class="header-item">
+                <ul id="header-links">
+                    <li><a target="_blank" href="https://www.behance.net/clairecodesign"><i class="fab fa-behance"></i></a></li>
+                    <li><a target="_blank" href="https://dribbble.com/clairecodesign"><i class="fab fa-dribbble"></i></a></li>
+                    <li><a target="_blank" href="https://www.linkedin.com/in/claireguzman/"><i class="fab fa-linkedin"></i></a></li> 
+                </ul>
+            </div>
+            <div class="header-item">
+                <h1 id="page-title">CLAIRE<b>CO</b>DESIGN</h1>
+            </div>
+            <div class="header-item">
+                <ul id="navigation">  
+                    <li><a href="index.html">Work</a></li>
+                    <li>About</li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </header>
+        <main>
+            <div id="about-page">
+                <center><img src="headshot2.png" alt="clairecodesign headshot" id="headshot"> </center>
+                
+                <p> 
+                    <span class="stand-out">I'm Claire, a graphic and UX/UI designer.</span>
+                    I'm passionate about design, and the ways it can be applied to solve our online user experience problems.
+                    I'm currently a student at Coursera's Google UX Design Certificate. Prior to that, I received an AS in Web Development, but my never-ending curiosity has led me to learn about graphic design, photography, digital marketing, and French. 
+                </p>
+                <ul id="skills">
+                    <li>Photography</li>
+                    <li>Graphic Design</li>
+                    <li>Visual Design</li>
+                    <li>Branding</li>
+                    <li>UX/UI Design</li>
+                    <li>Adobe Creative Cloud</li>
+                    <li>Figma</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                <!-- </ul>
+                <h3 class="title">Location</h3>
+                <p> <i class="fas fa-map-marker-alt"> </i> Imperial, CA</p>
+                <div id="contact">
+                    <h3 id="call">Let's chat!</h3>
+                    <p> <i>email@gmail.com</i></p>
+                </div> -->
+           </div>
+        </main>
+        <footer>
+            <ul id="footer-links">
+                <li><a target="_blank" href="https://www.behance.net/clairecodesign"><i class="fab fa-behance"></i></a></li>
+               <li><a target="_blank" href="https://dribbble.com/clairecodesign"><i class="fab fa-dribbble"></i></a></li>
+               <li><a target="_blank" href="https://www.linkedin.com/in/claireguzman/"><i class="fab fa-linkedin"></i></a></li> 
+           </ul>
+        </footer>
+    </body>
+</html>
