--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <div id="contact">
                 <p> <i class="fas fa-map-marker-alt"></i> <b>Imperial, CA</b></p>
 
-                <center><img src="map.png" alt="map"></center> 
+                <center><a target="_blank" href="https://goo.gl/maps/1nXZwhvHHGFCJX9G7"><img src="map.png" alt="map"></a></center> 
                 <h3 id="call">Let's chat!</h3>
                 <p class="stand-out"> <i>email@gmail.com</i></p>
             </div>
