--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel='icon' href='favicon.ico' type='image/x-icon' />
         <meta name="description" content="I'm Claire, a graphic and UX/UI designer. I'm passionate about designing useful solutions to the online user experience." />
-        <!--<meta name="keywords" content="" />
-        <link rel="apple-touch-icon" href="favicon.png" />-->
+        <!--<meta name="keywords" content="" />-->
+        <link rel="apple-touch-icon" href="clairecodesign-logo.png" />
 
         <title>CLAIRECODESIGN</title>
 
