--- a/project-1-name.html
+++ b/project-1-name.html
@@ -1,13 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel='icon' href='favicon.ico' type='image/x-icon' />
+        <link rel='icon' href='images/favicon.ico' type='image/x-icon' />
         <meta name="description" content="I'm Claire, a graphic and UX/UI designer. I'm passionate about designing useful solutions to the online user experience." />
-        <!--<meta name="keywords" content="" />
-        <link rel="apple-touch-icon" href="favicon.png" />-->
+        <!--<meta name="keywords" content="" />-->
+        <link rel="apple-touch-icon" href="images/clairecodesign-logo.png" />
 
         <title>CLAIRECODESIGN</title>
 
@@ -32,19 +31,45 @@
             </div>
             <div class="header-item">
                 <ul id="navigation">  
-                    <li><a href="index.html">Back Home</a></li>
+                    <li><a href="index.html">&larr;</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </header>
         <main>
             <div id="content">
                 <div class="project">
-                    <img src="project-4.png" alt="project 1" class="project-thumbnail"> 
-                    <h3 class="project-date"><i>August 21, 1919</i></h3>
-                    <h2 class="project-title">Case Study: The Usability of the Facebook Marketplace on Mobile.</h2>
-                    <p class="project-information"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur illum, similique ratione placeat beatae nulla fugit? Dolor animi recusandae dolore eligendi praesentium obcaecati illum, sed quae sequi consequatur. Nisi, cum! </p>
+                    <img class="project-thumbnail" src="images/project-template.png" alt="project 1"> 
+                    <h4 class="project-date"><i>August 21, 1919</i></h4>
+                    <h2 class="project-title">Lorem, ipsum: Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    </h2>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur illum, similique ratione placeat beatae nulla fugit? Dolor animi recusandae dolore eligendi praesentium obcaecati illum, sed quae sequi consequatur. Nisi, cum! </p>
+
+                    <div class="row">
+                        <div class="column">
+                            <h3>Duration</h3>
+                            <p>3 weeks</p>
+                            <h3>Role</h3>
+                            <p>Visual designer</p>
+                        </div>
+                        <div class="column">
+                            <h3>Goal</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, mollitia doloremque? Ratione facere nulla ad architecto.</p>
+                        </div>
+                    </div>
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt dignissimos porro quasi sint tenetur aut odit, dicta quam quo saepe beatae iusto accusamus. Laborum qui adipisci ea tempore minus rerum similique amet quod labore iusto unde, incidunt, natus vero atque ratione saepe, earum in temporibus veniam fugiat minima aliquid obcaecati! <span class="stand-out">Tempora ipsam repudiandae incidunt?</span> <i>Consequuntur amet voluptates cum enim praesentium.</i></p>
+
+                    <div class="row">
+                        <div class="column">
+                            <img src="images/image-1.png" alt="photo">
+                        </div>
+                        <div class="column">
+                            <img src="images/image-1.png" alt="photo">
+                        </div>
+                    </div>
+
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam ea, facere consequuntur enim saepe molestias quaerat, nihil asperiores eligendi voluptatum provident dignissimos voluptatibus officia dicta itaque quos, sit iusto delectus id. Id nostrum voluptas iste, rerum pariatur, temporibus eius iure in aspernatur, alias odit? Illum excepturi nostrum in iure sapiente labore ipsum eligendi alias? Eos, blanditiis? Exercitationem ipsam odio aliquam facere repudiandae, nisi ad recusandae totam! Nam voluptatibus excepturi placeat!</p>
                 </div>
             </div>
         </main>
@@ -54,5 +79,6 @@
                 <li><a target="_blank" href="https://dribbble.com/clairecodesign"><i class="fab fa-dribbble"></i></a></li>
                 <li><a target="_blank" href="https://www.linkedin.com/in/claireguzman/"><i class="fab fa-linkedin"></i></a></li> 
             </ul>
+        </footer>
     </body>
 </html>
