--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel='icon' href='favicon.ico' type='image/x-icon' />
+        <link rel='icon' href='images/favicon.ico' type='image/x-icon' />
         <meta name="description" content="I'm Claire, a graphic and UX/UI designer. I'm passionate about designing useful solutions to the online user experience." />
         <!--<meta name="keywords" content="" />-->
-        <link rel="apple-touch-icon" href="clairecodesign-logo.png" />
+        <link rel="apple-touch-icon" href="images/clairecodesign-logo.png" />
 
         <title>CLAIRECODESIGN</title>
 
@@ -33,15 +33,26 @@
                 <ul id="navigation">  
                     <li>Home</li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </header>
         <main>
             <div id="content">
-                <article class="project">
-                    <a href="project-1-name.html"><img src="project-4.png" alt="project 1" class="project-thumbnail"> </a>
-                </article>
+                <section>
+                    <a href="project-1-name.html"><img src="images/project-template.png" alt="project 1" class="project-thumbnail"> </a>
+                </section>
+                <section>
+                    <img src="images/project-template-2.png" alt="project 1" class="project-thumbnail"> 
+                </section>
+                <section>
+                    <img src="images/project-template-3.png" alt="project 1" class="project-thumbnail"> 
+                </section>
+                <section>
+                    <img src="images/project-template-4.png" alt="project 1" class="project-thumbnail"> 
+                </section>
+                <section>
+                    <img src="images/project-template-5.png" alt="project 1" class="project-thumbnail"> 
+                </section>
             </div>
         </main>
         <footer>
