--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel='icon' href='favicon.ico' type='image/x-icon' />
+        <link rel='icon' href='images/favicon.ico' type='image/x-icon' />
         <meta name="description" content="I'm Claire, a graphic and UX/UI designer. I'm passionate about designing useful solutions to the online user experience." />
-        <!--<meta name="keywords" content="" />
-        <link rel="apple-touch-icon" href="favicon.png" />-->
+        <!--<meta name="keywords" content="" />-->
+        <link rel="apple-touch-icon" href="images/clairecodesign-logo.png" />
 
         <title>CLAIRECODESIGN</title>
 
@@ -33,37 +33,43 @@
                 <ul id="navigation">  
                     <li><a href="index.html">Work</a></li>
                     <li>About</li>
-                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </header>
         <main>
             <div id="about-page">
-                <center><img src="headshot2.png" alt="clairecodesign headshot" id="headshot"> </center>
-                
-                <p> 
-                    <span class="stand-out">I'm Claire, a graphic and UX/UI designer.</span>
-                    I'm passionate about design, and the ways it can be applied to solve our online user experience problems.
-                    I'm currently a student at Coursera's Google UX Design Certificate. Prior to that, I received an AS in Web Development, but my never-ending curiosity has led me to learn about graphic design, photography, digital marketing, and French. 
-                </p>
-                <ul id="skills">
-                    <li>Photography</li>
-                    <li>Graphic Design</li>
-                    <li>Visual Design</li>
-                    <li>Branding</li>
-                    <li>UX/UI Design</li>
-                    <li>Adobe Creative Cloud</li>
-                    <li>Figma</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                <!-- </ul>
-                <h3 class="title">Location</h3>
-                <p> <i class="fas fa-map-marker-alt"> </i> Imperial, CA</p>
-                <div id="contact">
-                    <h3 id="call">Let's chat!</h3>
-                    <p> <i>email@gmail.com</i></p>
-                </div> -->
-           </div>
+                    <center><img id="headshot" src="images/headshot2.png" alt="clairecodesign headshot"> </center>
+                    <h2>I'm Claire, a graphic and UX/UI designer.</h2>
+                <div class="row">
+                    <div class="column">
+                        <h3>About me</h3>
+                    </div>
+                    <div class="column">
+                        <p> 
+                            I'm passionate about design, and the ways it can be applied to solve our online user experience problems.
+                            I'm currently a student at Coursera's Google UX Design Certificate. Prior to that, I received an AS in Web Development, but my never-ending curiosity has led me to learn about graphic design, photography, digital marketing, and French. 
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="column"> 
+                        <h3>Skills</h3>
+                    </div>
+                    <div class="column">
+                        <p>
+                            Photography, Graphic Design, Visual Design, Branding, UX/UI Design, Adobe Creative Cloud, Figma, HTML, CSS
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="column">
+                        <h3>Contact</h3>
+                    </div>
+                    <div class="column">
+                        <p>email@gmail.com</p>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer>
             <ul id="footer-links">
